testsuite/tests/parse-errors/pr7847.compilers.reference
File "pr7847.ml", line 10, characters 30-31:
10 | external x : unit -> (int,int)`A.t = "x"
                                   ^
Error: Syntax error
